--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -41,3 +41,23 @@
 .carousel-leave.carousel-leave-active {
     transform: translateX(-100%);
 }
+
+.carousel-reverse-enter {
+    position: absolute;
+    transform: translateX(-100%);
+    transition: transform .4s ease-in-out;
+}
+
+.carousel-reverse-enter.carousel-reverse-enter-active {
+    transform: translateX(0);
+}
+
+.carousel-reverse-leave {
+    position: absolute;
+    transform: translateX(0);
+    transition: transform .4s ease-in-out;
+}
+
+.carousel-reverse-leave.carousel-reverse-leave-active {
+    transform: translateX(100%);
+}
