--- a/template/stream.css
+++ b/template/stream.css
@@ -1,3 +1,52 @@
-.NavMenu {
-	background-color: lime;
+body {
+  font-size: 16px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+
+.NavMenu {
+  background-color: #17151d;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 170px;
+}
+.NavMenu ul {
+  padding: 0;
+  margin: 0;
+}
+.NavMenu li {
+  border-left: 3px solid transparent;
+}
+.NavMenu li.active {
+  border-left-color: #5f3ffb;
+}
+.NavMenu li.active a {
+  color: white;
+}
+.NavMenu li:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.NavMenu li:hover a {
+  color: white;
+}
+.NavMenu a {
+  display: block;
+  color: #ddd;
+  font-weight: 100;
+  padding: 0 1em;
+  text-decoration: none;
+  line-height: 2em;
+  font-size: 0.9em;
+  letter-spacing: 1.5px;
+}
+
+.PageStream {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: calc(100% - 170px);
+}
+
+/*# sourceMappingURL=stream.css.map */
