extract into scss component

--- a/template/index.html
+++ b/template/index.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-	<link rel="stylesheet" href="./normalize.css">
-	<link rel="stylesheet" href="./stream.css">
+	<link rel="stylesheet" href="./stylesheets/normalize.css">
+	<link rel="stylesheet" href="./stylesheets/stream.css">
 </head>
 <body>
 	<div class="NavMenu">
