style up HeroSlide, CoverTile

--- a/template/index.html
+++ b/template/index.html
@@ -15,11 +15,22 @@
 
 	<div class="PageStream">
 		<div class="HeroStream">
+			<h2 class="StreamTitle">Now Watching</h2>
 			<div class="HeroVideo">
 				<img src="./hero_video.png" alt="">
 			</div>
 			<div class="HeroSlide">
-				<div class="CoverTile active"><img src="./cover_tile.png"></div>
+                <a href="#">
+    				<div class="CoverTile active">
+                        <label class="WatchingLabel">Now Watching</label>
+                        <label class="DurationLabel">1:19</label>
+                        <div class="CoverOverlay">
+                            <span>1,300 views</span>
+                            <p>Thoughts You Have While Thoughts You Have While</p>
+                        </div>
+                        <img src="./cover_tile.jpg">
+                    </div>
+                </a>
 				<div class="CoverTile"><img src="./cover_tile.png"></div>
 				<div class="CoverTile"><img src="./cover_tile.png"></div>
 				<div class="CoverTile"><img src="./cover_tile.png"></div>
