--- a/template/stylesheets/_variable.scss
+++ b/template/stylesheets/_variable.scss
@@ -1,5 +1,6 @@
 $NAV_MENU_WIDTH: 170px;
 $COLOR_BG: #17151d;
+$COLOR_BG_2: #1d1d24;
 $COLOR_HIGHLIGHT: #5f3ffb;
 $COLOR_LINK: #ddd;
 $COLOR_LINK_ACTIVE: white;
