--- a/template/stylesheets/stream.css
+++ b/template/stylesheets/stream.css
@@ -36,6 +36,20 @@
   letter-spacing: 1.5px;
 }
 
+.cf:before, .HeroStream:before, .HeroSlide:before,
+.cf:after,
+.HeroStream:after,
+.HeroSlide:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+
+.cf:after, .HeroStream:after, .HeroSlide:after {
+  clear: both;
+}
+
 body {
   font-size: 16px;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -45,8 +59,92 @@ body {
   position: absolute;
   top: 0;
   right: 0;
-  bottom: 0;
   width: calc(100% - 170px);
+  background-color: #1d1d24;
+  padding-left: 1em;
+  box-sizing: border-box;
+}
+
+.HeroStream {
+  margin-bottom: 3em;
+}
+
+.StreamTitle {
+  color: white;
+  font-weight: 100;
+  letter-spacing: 2px;
+  font-size: 1.125em;
+  line-height: 1em;
+  margin: 0.5em 0;
+}
+
+.HeroVideo {
+  float: left;
+  margin-right: 2px;
+}
+
+.HeroSlide {
+  float: left;
+  width: 380px;
+}
+
+.CoverTile {
+  width: 184px;
+  float: left;
+  margin: 0 2px 2px 0;
+  position: relative;
+}
+.CoverTile img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.WatchingLabel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 0.6em;
+  letter-spacing: 0.7px;
+  background-color: #f80e5d;
+  color: white;
+  padding: 3px 6px;
+  text-transform: uppercase;
+}
+
+.DurationLabel {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 0.6em;
+  letter-spacing: 0.7px;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 3px 6px;
+  text-transform: uppercase;
+}
+
+.CoverOverlay {
+  padding-top: 20px;
+  background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.8) 75%, rgba(0, 0, 0, 0.8) 100%);
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+.CoverOverlay span {
+  padding: 0 0 2px 6px;
+  font-size: 0.625em;
+  color: #ccc;
+}
+.CoverOverlay p {
+  padding: 2px 6px 4px;
+  color: white;
+  font-size: 0.78125em;
+  margin: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  text-shadow: black 0px 1px 0px;
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=stream.css.map */
