style up Stream

--- a/template/stylesheets/_navMenu.scss
+++ b/template/stylesheets/_navMenu.scss
@@ -33,5 +33,7 @@
         line-height: 2em;
         font-size: 0.9em;
         letter-spacing: 1.5px;
+        -webkit-user-select: none;
+        user-select: none;
     }
 }
