--- a/template/stylesheets/_variable.scss
+++ b/template/stylesheets/_variable.scss
@@ -4,3 +4,6 @@ $COLOR_BG_2: #1d1d24;
 $COLOR_HIGHLIGHT: #5f3ffb;
 $COLOR_LINK: #ddd;
 $COLOR_LINK_ACTIVE: white;
+$COVER_WIDTH: 184px;
+$COVER_HEIGHT: $COVER_WIDTH / 16 * 9;
+$NAV_BUTTON_WIDTH: 40px;
