style up hero nav button

--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="./stylesheets/normalize.css">
-    <link rel="stylesheet" href="./stylesheets/stream.css">
+    <link rel="stylesheet" href="./stylesheets/page_stream.css">
 </head>
 <body>
     <div class="NavMenu">
@@ -38,8 +38,8 @@
                 <div class="CoverTile"><img src="./cover_tile.png"></div>
             </div>
             <div class="HeroNavButtonContainer">
-                <button>Prev</button>
-                <button>Next</button>
+                <span class="NavButton Left"></span>
+                <span class="NavButton Right"></span>
             </div>
         </div>
 
