--- a/template/stylesheets/page_stream.css
+++ b/template/stylesheets/page_stream.css
@@ -1,4 +1,16 @@
 @charset "UTF-8";
+.cf:before, .HeroStream:before, .HeroSlide:before, .Stream:before, .Slide:before,
+.cf:after,
+.HeroStream:after,
+.HeroSlide:after,
+.Stream:after,
+.Slide:after {
+  content: " ";
+  display: table; }
+
+.cf:after, .HeroStream:after, .HeroSlide:after, .Stream:after, .Slide:after {
+  clear: both; }
+
 .NavMenu {
   background-color: #17151d;
   position: fixed;
@@ -31,36 +43,10 @@
     -webkit-user-select: none;
     user-select: none; }
 
-.cf:before, .HeroStream:before, .HeroSlide:before, .Stream:before, .Slide:before,
-.cf:after,
-.HeroStream:after,
-.HeroSlide:after,
-.Stream:after,
-.Slide:after {
-  content: " ";
-  /* 1 */
-  display: table;
-  /* 2 */ }
-
-.cf:after, .HeroStream:after, .HeroSlide:after, .Stream:after, .Slide:after {
-  clear: both; }
-
-body {
-  font-size: 16px;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
-
-.PageStream {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: calc(100% - 170px);
-  background-color: #1d1d24;
-  padding-left: 1em;
-  box-sizing: border-box;
-  padding-bottom: 6em; }
-
 .HeroStream {
-  margin-bottom: 3em; }
+  margin-bottom: 3em;
+  position: relative;
+  width: 934px; }
 
 .StreamTitle {
   color: white;
@@ -76,7 +62,7 @@ body {
 
 .HeroSlide {
   float: left;
-  width: 380px; }
+  width: 372px; }
 
 .CoverTile {
   width: 184px;
@@ -130,6 +116,20 @@ body {
     text-shadow: black 0px 1px 0px;
     overflow: hidden; }
 
+.HeroNavButtonContainer {
+  position: absolute;
+  bottom: -38px;
+  right: 2px;
+  width: 82px; }
+  .HeroNavButtonContainer span {
+    background-color: rgba(80, 80, 80, 0.5);
+    bottom: 0;
+    margin-bottom: 0; }
+    .HeroNavButtonContainer span:hover {
+      background-color: rgba(80, 80, 80, 0.9); }
+    .HeroNavButtonContainer span:active {
+      background-color: rgba(80, 80, 80, 0.8); }
+
 .Stream {
   margin-bottom: 3em;
   width: 1162.5px;
@@ -143,7 +143,7 @@ body {
   position: absolute;
   height: 40px;
   width: 40px;
-  bottom: 51.75px;
+  bottom: 56.925px;
   margin-bottom: -20px;
   background-color: rgba(17, 17, 17, 0.5);
   border: none;
@@ -154,11 +154,10 @@ body {
   line-height: 0.7em;
   text-align: center;
   cursor: pointer;
-  -webkit-user-select: none; }
+  -webkit-user-select: none;
+  box-sizing: border-box; }
   .NavButton:hover {
     background-color: rgba(17, 17, 17, 0.9); }
-  .NavButton:active {
-    width: 41px; }
   .NavButton.Left {
     left: 0; }
     .NavButton.Left:after {
@@ -168,4 +167,18 @@ body {
     .NavButton.Right:after {
       content: '›'; }
 
-/*# sourceMappingURL=stream.css.map */
+body {
+  font-size: 16px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+
+.PageStream {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: calc(100% - 170px);
+  background-color: #1d1d24;
+  padding-left: 1em;
+  box-sizing: border-box;
+  padding-bottom: 3em; }
+
+/*# sourceMappingURL=page_stream.css.map */
