--- a/template/stylesheets/page_stream.css
+++ b/template/stylesheets/page_stream.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url(plugins/normalize.css);
 .cf:before, .HeroStream:before, .HeroSlide:before, .Stream:before, .Slide:before,
 .cf:after,
 .HeroStream:after,
@@ -42,27 +43,6 @@
     letter-spacing: 1.5px;
     -webkit-user-select: none;
     user-select: none; }
-
-.HeroStream {
-  margin-bottom: 3em;
-  position: relative;
-  width: 934px; }
-
-.StreamTitle {
-  color: white;
-  font-weight: 100;
-  letter-spacing: 2px;
-  font-size: 1.125em;
-  line-height: 1em;
-  margin: 0.5em 0; }
-
-.HeroVideo {
-  float: left;
-  margin-right: 2px; }
-
-.HeroSlide {
-  float: left;
-  width: 372px; }
 
 .CoverTile {
   width: 184px;
@@ -115,6 +95,27 @@
     text-overflow: ellipsis;
     text-shadow: black 0px 1px 0px;
     overflow: hidden; }
+
+.HeroStream {
+  margin-bottom: 3em;
+  position: relative;
+  width: 934px; }
+
+.StreamTitle {
+  color: white;
+  font-weight: 100;
+  letter-spacing: 2px;
+  font-size: 1.125em;
+  line-height: 1em;
+  margin: 0.5em 0; }
+
+.HeroVideo {
+  float: left;
+  margin-right: 2px; }
+
+.HeroSlide {
+  float: left;
+  width: 372px; }
 
 .HeroNavButtonContainer {
   position: absolute;
