--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./stylesheets/page_stream.css">
 </head>
 <body>
-    <div class="nav-menu">
+    <div class="NavMenu">
         <ul>
             <li class="active"><a href="#">Stream</a></li>
             <li><a href="#">Map Search</a></li>
