--- a/template/index.html
+++ b/template/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <div class="NavMenu">
+        <a href="#" class="Logo"></a>
         <ul>
             <li class="active"><a href="#">Stream</a></li>
             <li><a href="#">Map Search</a></li>
