--- a/template/stylesheets/page_stream.scss
+++ b/template/stylesheets/page_stream.scss
@@ -3,6 +3,7 @@
 @import 'globals/variable';
 @import 'globals/mixin';
 
+@import 'components/logo';
 @import 'components/nav_menu';
 @import 'components/cover_tile';
 @import 'components/hero_stream';
