--- a/template/stylesheets/components/logo.scss
+++ b/template/stylesheets/components/logo.scss
@@ -1,5 +1,5 @@
 .Logo {
-    background: url('../cardian_logo.png') no-repeat -7px -4px;
+    background: url('../img/cardian_logo.png') no-repeat -7px -4px;
     background-size: 156px 77px;
     width: 146px;
     height: 68px;
