--- a/public/assets/css/page_stream.css
+++ b/public/assets/css/page_stream.css
@@ -89,10 +89,6 @@
   position: absolute;
   width: 100%;
   bottom: 0; }
-  .CoverOverlay span {
-    padding: 0 0 2px 6px;
-    font-size: 0.625em;
-    color: #ccc; }
   .CoverOverlay p {
     padding: 2px 6px 4px;
     color: white;
@@ -102,6 +98,11 @@
     text-overflow: ellipsis;
     text-shadow: black 0px 1px 0px;
     overflow: hidden; }
+
+.CoverViews {
+  padding: 0 0 2px 6px;
+  font-size: 0.625em;
+  color: #ccc; }
 
 .HeroStream {
   margin-bottom: 3em;
