--- a/template/index.html
+++ b/template/index.html
@@ -25,7 +25,7 @@
                         <label class="WatchingLabel">Now Watching</label>
                         <label class="DurationLabel">1:19</label>
                         <div class="CoverOverlay">
-                            <span>1,300 views</span>
+                            <span class="CoverViews">1,300 views</span>
                             <p>Thoughts You Have While Thoughts You Have While</p>
                         </div>
                         <img src="./cover_tile.jpg">
@@ -51,7 +51,7 @@
                         <label class="WatchingLabel">Now Watching</label>
                         <label class="DurationLabel">1:19</label>
                         <div class="CoverOverlay">
-                            <span>1,300 views</span>
+                            <span class="CoverViews">1,300 views</span>
                             <p>Thoughts You Have While Thoughts You Have While</p>
                         </div>
                         <img src="./cover_tile.jpg">
@@ -76,7 +76,7 @@
                         <label class="WatchingLabel">Now Watching</label>
                         <label class="DurationLabel">1:19</label>
                         <div class="CoverOverlay">
-                            <span>1,300 views</span>
+                            <span class="CoverViews">1,300 views</span>
                             <p>Thoughts You Have While Thoughts You Have While</p>
                         </div>
                         <img src="./cover_tile.jpg">
