--- a/template/stylesheets/globals/variable.scss
+++ b/template/stylesheets/globals/variable.scss
@@ -6,6 +6,8 @@ $COLOR_LINK_ACTIVE: white;
 
 $COVER_WIDTH: 184px;
 $COVER_HEIGHT: $COVER_WIDTH / 16 * 9;
+$HERO_WIDTH: 560px;
+$HERO_HEIGHT: $HERO_WIDTH / 16 * 9;
 $GUTTER: 2px;
 $NAV_BUTTON_WIDTH: 40px;
 $NAV_MENU_WIDTH: 170px;
