--- a/public/assets/css/page_stream.css
+++ b/public/assets/css/page_stream.css
@@ -53,6 +53,7 @@
 
 .CoverTile {
   width: 184px;
+  min-height: 103.5px;
   float: left;
   margin: 0 2px 2px 0;
   position: relative; }
@@ -119,7 +120,9 @@
 
 .HeroVideo {
   float: left;
-  margin-right: 2px; }
+  margin-right: 2px;
+  min-width: 560px;
+  min-height: 315px; }
 
 .HeroSlide {
   float: left;
