add animation to slide

--- a/template/index.html
+++ b/template/index.html
@@ -19,23 +19,25 @@
             <div class="HeroVideo">
                 <img src="./hero_video.png" alt="">
             </div>
-            <div class="HeroSlide">
-                <a href="#">
-                    <div class="CoverTile active">
-                        <label class="WatchingLabel">Now Watching</label>
-                        <label class="DurationLabel">1:19</label>
-                        <div class="CoverOverlay">
-                            <span class="CoverViews">1,300 views</span>
-                            <p>Thoughts You Have While Thoughts You Have While</p>
+            <div class="HeroSlideViewport">
+                <div class="HeroSlide">
+                    <a href="#">
+                        <div class="CoverTile active">
+                            <label class="WatchingLabel">Now Watching</label>
+                            <label class="DurationLabel">1:19</label>
+                            <div class="CoverOverlay">
+                                <span class="CoverViews">1,300 views</span>
+                                <p>Thoughts You Have While Thoughts You Have While</p>
+                            </div>
+                            <img src="./cover_tile.jpg">
                         </div>
-                        <img src="./cover_tile.jpg">
-                    </div>
-                </a>
-                <div class="CoverTile"><img src="./cover_tile.png"></div>
-                <div class="CoverTile"><img src="./cover_tile.png"></div>
-                <div class="CoverTile"><img src="./cover_tile.png"></div>
-                <div class="CoverTile"><img src="./cover_tile.png"></div>
-                <div class="CoverTile"><img src="./cover_tile.png"></div>
+                    </a>
+                    <div class="CoverTile"><img src="./cover_tile.png"></div>
+                    <div class="CoverTile"><img src="./cover_tile.png"></div>
+                    <div class="CoverTile"><img src="./cover_tile.png"></div>
+                    <div class="CoverTile"><img src="./cover_tile.png"></div>
+                    <div class="CoverTile"><img src="./cover_tile.png"></div>
+                </div>
             </div>
             <div class="HeroNavButtonContainer">
                 <span class="NavButton Left"></span>
