--- a/public/assets/css/page_stream.css
+++ b/public/assets/css/page_stream.css
@@ -124,6 +124,12 @@
   min-width: 560px;
   min-height: 315px; }
 
+.HeroSlideViewport {
+  position: relative;
+  overflow: hidden;
+  width: 372px;
+  height: 316.5px; }
+
 .HeroSlide {
   float: left;
   width: 372px; }
