--- a/public/assets/css/animation.css
+++ b/public/assets/css/animation.css
@@ -1,3 +1,64 @@
+/* slide */
+.slide-left-enter {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    transition: left 0.25s ease-in-out;
+}
+
+.slide-left-enter-active {
+    left: 0;
+}
+
+.slide-left-leave {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: left 0.25s ease-in-out;
+}
+
+.slide-left-leave-active {
+    left: -100%;
+}
+
+
+
+
+
+
+.slide-right-enter {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    transition: left 0.25s ease-in-out;
+}
+
+.slide-right-enter-active {
+    left: 0;
+}
+
+.slide-right-leave {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: left 0.25s ease-in-out;
+}
+
+.slide-right-leave-active {
+    left: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* hero slide */
 .hero-slide-left-enter {
     position: absolute;
     top: 0;
